--- a/1.train_models/log_reg_plate_1_cp_fs_data/train_model.ipynb
+++ b/1.train_models/log_reg_plate_1_cp_fs_data/train_model.ipynb
@@ -23,10 +23,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:00:18.823098Z",
-     "iopub.status.busy": "2023-06-29T21:00:18.822988Z",
-     "iopub.status.idle": "2023-06-29T21:00:19.209026Z",
-     "shell.execute_reply": "2023-06-29T21:00:19.208627Z"
+     "iopub.execute_input": "2023-06-29T21:54:50.386449Z",
+     "iopub.status.busy": "2023-06-29T21:54:50.386350Z",
+     "iopub.status.idle": "2023-06-29T21:54:50.772579Z",
+     "shell.execute_reply": "2023-06-29T21:54:50.772250Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
@@ -58,10 +58,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:00:19.210977Z",
-     "iopub.status.busy": "2023-06-29T21:00:19.210667Z",
-     "iopub.status.idle": "2023-06-29T21:00:19.213370Z",
-     "shell.execute_reply": "2023-06-29T21:00:19.213057Z"
+     "iopub.execute_input": "2023-06-29T21:54:50.774327Z",
+     "iopub.status.busy": "2023-06-29T21:54:50.773942Z",
+     "iopub.status.idle": "2023-06-29T21:54:50.776555Z",
+     "shell.execute_reply": "2023-06-29T21:54:50.776290Z"
     },
     "jukit_cell_id": "Iz4nqgONsd"
    },
@@ -99,10 +99,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:00:19.214826Z",
-     "iopub.status.busy": "2023-06-29T21:00:19.214601Z",
-     "iopub.status.idle": "2023-06-29T21:00:19.216594Z",
-     "shell.execute_reply": "2023-06-29T21:00:19.216300Z"
+     "iopub.execute_input": "2023-06-29T21:54:50.777836Z",
+     "iopub.status.busy": "2023-06-29T21:54:50.777574Z",
+     "iopub.status.idle": "2023-06-29T21:54:50.779435Z",
+     "shell.execute_reply": "2023-06-29T21:54:50.779207Z"
     },
     "jukit_cell_id": "EBc3nCzByb"
    },
@@ -126,10 +126,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:00:19.217882Z",
-     "iopub.status.busy": "2023-06-29T21:00:19.217636Z",
-     "iopub.status.idle": "2023-06-29T21:00:19.219821Z",
-     "shell.execute_reply": "2023-06-29T21:00:19.219527Z"
+     "iopub.execute_input": "2023-06-29T21:54:50.780737Z",
+     "iopub.status.busy": "2023-06-29T21:54:50.780479Z",
+     "iopub.status.idle": "2023-06-29T21:54:50.782551Z",
+     "shell.execute_reply": "2023-06-29T21:54:50.782303Z"
     },
     "jukit_cell_id": "EYGHUOxuTt"
    },
@@ -162,10 +162,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:00:19.221084Z",
-     "iopub.status.busy": "2023-06-29T21:00:19.220867Z",
-     "iopub.status.idle": "2023-06-29T21:00:19.247147Z",
-     "shell.execute_reply": "2023-06-29T21:00:19.246875Z"
+     "iopub.execute_input": "2023-06-29T21:54:50.783839Z",
+     "iopub.status.busy": "2023-06-29T21:54:50.783740Z",
+     "iopub.status.idle": "2023-06-29T21:54:50.810127Z",
+     "shell.execute_reply": "2023-06-29T21:54:50.809863Z"
     },
     "jukit_cell_id": "A8cPG2OifP"
    },
@@ -198,10 +198,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:00:19.248576Z",
-     "iopub.status.busy": "2023-06-29T21:00:19.248416Z",
-     "iopub.status.idle": "2023-06-29T21:00:19.250329Z",
-     "shell.execute_reply": "2023-06-29T21:00:19.250094Z"
+     "iopub.execute_input": "2023-06-29T21:54:50.811611Z",
+     "iopub.status.busy": "2023-06-29T21:54:50.811316Z",
+     "iopub.status.idle": "2023-06-29T21:54:50.813177Z",
+     "shell.execute_reply": "2023-06-29T21:54:50.812939Z"
     },
     "jukit_cell_id": "jH432rS91v"
    },
@@ -211,8 +211,7 @@
     "stratify_column = \"Metadata_Well\"\n",
     "\n",
     "# These represent the fractions of the entire dataset\n",
-    "train_val_frac = 0.85\n",
-    "test_frac = 1 - train_val_frac"
+    "train_val_frac = 0.85"
    ]
   },
   {
@@ -229,10 +228,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:00:19.251428Z",
-     "iopub.status.busy": "2023-06-29T21:00:19.251216Z",
-     "iopub.status.idle": "2023-06-29T21:00:19.259897Z",
-     "shell.execute_reply": "2023-06-29T21:00:19.259630Z"
+     "iopub.execute_input": "2023-06-29T21:54:50.814266Z",
+     "iopub.status.busy": "2023-06-29T21:54:50.814165Z",
+     "iopub.status.idle": "2023-06-29T21:54:50.822913Z",
+     "shell.execute_reply": "2023-06-29T21:54:50.822672Z"
     },
     "jukit_cell_id": "6wLIrXfTzh"
    },
@@ -264,10 +263,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:00:19.261240Z",
-     "iopub.status.busy": "2023-06-29T21:00:19.260957Z",
-     "iopub.status.idle": "2023-06-29T21:00:19.264808Z",
-     "shell.execute_reply": "2023-06-29T21:00:19.264569Z"
+     "iopub.execute_input": "2023-06-29T21:54:50.824357Z",
+     "iopub.status.busy": "2023-06-29T21:54:50.824125Z",
+     "iopub.status.idle": "2023-06-29T21:54:50.828013Z",
+     "shell.execute_reply": "2023-06-29T21:54:50.827777Z"
     },
     "jukit_cell_id": "VNkswJFWjR"
    },
@@ -296,10 +295,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:00:19.265856Z",
-     "iopub.status.busy": "2023-06-29T21:00:19.265752Z",
-     "iopub.status.idle": "2023-06-29T21:00:19.268460Z",
-     "shell.execute_reply": "2023-06-29T21:00:19.268210Z"
+     "iopub.execute_input": "2023-06-29T21:54:50.829429Z",
+     "iopub.status.busy": "2023-06-29T21:54:50.829205Z",
+     "iopub.status.idle": "2023-06-29T21:54:50.831927Z",
+     "shell.execute_reply": "2023-06-29T21:54:50.831667Z"
     },
     "jukit_cell_id": "wqT9BUqx7w"
    },
@@ -308,13 +307,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_30430/4215398058.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_34300/4215398058.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  testdf[\"label\"] = le.fit_transform(testdf[target_column].values)\n",
-      "/tmp/ipykernel_30430/4215398058.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_34300/4215398058.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -343,10 +342,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:00:19.286824Z",
-     "iopub.status.busy": "2023-06-29T21:00:19.286545Z",
-     "iopub.status.idle": "2023-06-29T21:00:19.289608Z",
-     "shell.execute_reply": "2023-06-29T21:00:19.289363Z"
+     "iopub.execute_input": "2023-06-29T21:54:50.851343Z",
+     "iopub.status.busy": "2023-06-29T21:54:50.851053Z",
+     "iopub.status.idle": "2023-06-29T21:54:50.854080Z",
+     "shell.execute_reply": "2023-06-29T21:54:50.853840Z"
     },
     "jukit_cell_id": "UFK0jsur96"
    },
@@ -376,10 +375,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:00:19.290648Z",
-     "iopub.status.busy": "2023-06-29T21:00:19.290546Z",
-     "iopub.status.idle": "2023-06-29T21:00:19.293712Z",
-     "shell.execute_reply": "2023-06-29T21:00:19.293471Z"
+     "iopub.execute_input": "2023-06-29T21:54:50.855297Z",
+     "iopub.status.busy": "2023-06-29T21:54:50.855050Z",
+     "iopub.status.idle": "2023-06-29T21:54:50.858220Z",
+     "shell.execute_reply": "2023-06-29T21:54:50.857981Z"
     },
     "jukit_cell_id": "SnNRV5kCfc"
    },
@@ -443,10 +442,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:00:19.294815Z",
-     "iopub.status.busy": "2023-06-29T21:00:19.294565Z",
-     "iopub.status.idle": "2023-06-29T21:00:20.363695Z",
-     "shell.execute_reply": "2023-06-29T21:00:20.363342Z"
+     "iopub.execute_input": "2023-06-29T21:54:50.859406Z",
+     "iopub.status.busy": "2023-06-29T21:54:50.859166Z",
+     "iopub.status.idle": "2023-06-29T21:54:51.931033Z",
+     "shell.execute_reply": "2023-06-29T21:54:51.930650Z"
     },
     "jukit_cell_id": "4WFLztISAE"
    },
@@ -490,10 +489,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:00:20.365977Z",
-     "iopub.status.busy": "2023-06-29T21:00:20.365422Z",
-     "iopub.status.idle": "2023-06-29T21:00:20.371680Z",
-     "shell.execute_reply": "2023-06-29T21:00:20.371328Z"
+     "iopub.execute_input": "2023-06-29T21:54:51.932729Z",
+     "iopub.status.busy": "2023-06-29T21:54:51.932588Z",
+     "iopub.status.idle": "2023-06-29T21:54:51.938447Z",
+     "shell.execute_reply": "2023-06-29T21:54:51.938109Z"
     },
     "jukit_cell_id": "Qj7E7OvtI9"
    },
