Removed unused imports and variables

--- a/1.train_models/log_reg_plate_3_3p_cp_fs_data/train_model.ipynb
+++ b/1.train_models/log_reg_plate_3_3p_cp_fs_data/train_model.ipynb
@@ -23,35 +23,25 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T22:12:29.239686Z",
-     "iopub.status.busy": "2023-06-27T22:12:29.239589Z",
-     "iopub.status.idle": "2023-06-27T22:12:29.814093Z",
-     "shell.execute_reply": "2023-06-27T22:12:29.813640Z"
+     "iopub.execute_input": "2023-06-29T22:54:58.461452Z",
+     "iopub.status.busy": "2023-06-29T22:54:58.461302Z",
+     "iopub.status.idle": "2023-06-29T22:54:58.845265Z",
+     "shell.execute_reply": "2023-06-29T22:54:58.844944Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
    "outputs": [],
    "source": [
-    "import sys\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "from sklearn.metrics import (\n",
-    "    confusion_matrix,\n",
-    "    ConfusionMatrixDisplay,\n",
-    "    precision_score,\n",
-    "    accuracy_score,\n",
-    ")\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from collections import Counter\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
-    "from joblib import dump, load"
+    "from joblib import dump"
    ]
   },
   {
@@ -68,10 +58,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T22:12:29.815930Z",
-     "iopub.status.busy": "2023-06-27T22:12:29.815763Z",
-     "iopub.status.idle": "2023-06-27T22:12:29.818509Z",
-     "shell.execute_reply": "2023-06-27T22:12:29.818150Z"
+     "iopub.execute_input": "2023-06-29T22:54:58.846796Z",
+     "iopub.status.busy": "2023-06-29T22:54:58.846573Z",
+     "iopub.status.idle": "2023-06-29T22:54:58.849373Z",
+     "shell.execute_reply": "2023-06-29T22:54:58.849081Z"
     },
     "jukit_cell_id": "Iz4nqgONsd"
    },
@@ -109,10 +99,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T22:12:29.820337Z",
-     "iopub.status.busy": "2023-06-27T22:12:29.820058Z",
-     "iopub.status.idle": "2023-06-27T22:12:29.822324Z",
-     "shell.execute_reply": "2023-06-27T22:12:29.822017Z"
+     "iopub.execute_input": "2023-06-29T22:54:58.850989Z",
+     "iopub.status.busy": "2023-06-29T22:54:58.850881Z",
+     "iopub.status.idle": "2023-06-29T22:54:58.852920Z",
+     "shell.execute_reply": "2023-06-29T22:54:58.852680Z"
     },
     "jukit_cell_id": "EBc3nCzByb"
    },
@@ -136,10 +126,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T22:12:29.823648Z",
-     "iopub.status.busy": "2023-06-27T22:12:29.823435Z",
-     "iopub.status.idle": "2023-06-27T22:12:29.825710Z",
-     "shell.execute_reply": "2023-06-27T22:12:29.825414Z"
+     "iopub.execute_input": "2023-06-29T22:54:58.854217Z",
+     "iopub.status.busy": "2023-06-29T22:54:58.854118Z",
+     "iopub.status.idle": "2023-06-29T22:54:58.856419Z",
+     "shell.execute_reply": "2023-06-29T22:54:58.856184Z"
     },
     "jukit_cell_id": "EYGHUOxuTt"
    },
@@ -176,10 +166,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T22:12:29.827114Z",
-     "iopub.status.busy": "2023-06-27T22:12:29.826910Z",
-     "iopub.status.idle": "2023-06-27T22:12:30.279811Z",
-     "shell.execute_reply": "2023-06-27T22:12:30.279211Z"
+     "iopub.execute_input": "2023-06-29T22:54:58.857858Z",
+     "iopub.status.busy": "2023-06-29T22:54:58.857605Z",
+     "iopub.status.idle": "2023-06-29T22:54:59.000491Z",
+     "shell.execute_reply": "2023-06-29T22:54:59.000134Z"
     },
     "jukit_cell_id": "N0H3V1RbTX"
    },
@@ -215,10 +205,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T22:12:30.282156Z",
-     "iopub.status.busy": "2023-06-27T22:12:30.281829Z",
-     "iopub.status.idle": "2023-06-27T22:12:30.327216Z",
-     "shell.execute_reply": "2023-06-27T22:12:30.326848Z"
+     "iopub.execute_input": "2023-06-29T22:54:59.002644Z",
+     "iopub.status.busy": "2023-06-29T22:54:59.002514Z",
+     "iopub.status.idle": "2023-06-29T22:54:59.044375Z",
+     "shell.execute_reply": "2023-06-29T22:54:59.044012Z"
     },
     "jukit_cell_id": "bCflTponOs"
    },
@@ -250,10 +240,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T22:12:30.328895Z",
-     "iopub.status.busy": "2023-06-27T22:12:30.328757Z",
-     "iopub.status.idle": "2023-06-27T22:12:30.330717Z",
-     "shell.execute_reply": "2023-06-27T22:12:30.330462Z"
+     "iopub.execute_input": "2023-06-29T22:54:59.046065Z",
+     "iopub.status.busy": "2023-06-29T22:54:59.045782Z",
+     "iopub.status.idle": "2023-06-29T22:54:59.047796Z",
+     "shell.execute_reply": "2023-06-29T22:54:59.047544Z"
     },
     "jukit_cell_id": "jH432rS91v"
    },
@@ -263,9 +253,7 @@
     "stratify_column = \"Metadata_Well\"\n",
     "\n",
     "# These represent the fractions of the entire dataset\n",
-    "train_val_frac = 0.85\n",
-    "test_frac = 1 - train_val_frac\n",
-    "val_frac = 0.15"
+    "train_val_frac = 0.85"
    ]
   },
   {
@@ -282,10 +270,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T22:12:30.331910Z",
-     "iopub.status.busy": "2023-06-27T22:12:30.331754Z",
-     "iopub.status.idle": "2023-06-27T22:12:30.490843Z",
-     "shell.execute_reply": "2023-06-27T22:12:30.490421Z"
+     "iopub.execute_input": "2023-06-29T22:54:59.049164Z",
+     "iopub.status.busy": "2023-06-29T22:54:59.049066Z",
+     "iopub.status.idle": "2023-06-29T22:54:59.202638Z",
+     "shell.execute_reply": "2023-06-29T22:54:59.202221Z"
     },
     "jukit_cell_id": "6wLIrXfTzh"
    },
@@ -317,10 +305,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T22:12:30.493110Z",
-     "iopub.status.busy": "2023-06-27T22:12:30.492952Z",
-     "iopub.status.idle": "2023-06-27T22:12:30.598545Z",
-     "shell.execute_reply": "2023-06-27T22:12:30.598126Z"
+     "iopub.execute_input": "2023-06-29T22:54:59.204428Z",
+     "iopub.status.busy": "2023-06-29T22:54:59.204303Z",
+     "iopub.status.idle": "2023-06-29T22:54:59.308630Z",
+     "shell.execute_reply": "2023-06-29T22:54:59.308216Z"
     },
     "jukit_cell_id": "VNkswJFWjR"
    },
@@ -349,10 +337,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T22:12:30.600606Z",
-     "iopub.status.busy": "2023-06-27T22:12:30.600434Z",
-     "iopub.status.idle": "2023-06-27T22:12:30.606051Z",
-     "shell.execute_reply": "2023-06-27T22:12:30.605759Z"
+     "iopub.execute_input": "2023-06-29T22:54:59.310270Z",
+     "iopub.status.busy": "2023-06-29T22:54:59.310163Z",
+     "iopub.status.idle": "2023-06-29T22:54:59.315710Z",
+     "shell.execute_reply": "2023-06-29T22:54:59.315427Z"
     },
     "jukit_cell_id": "wqT9BUqx7w"
    },
@@ -361,13 +349,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_46461/4215398058.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_37462/4215398058.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  testdf[\"label\"] = le.fit_transform(testdf[target_column].values)\n",
-      "/tmp/ipykernel_46461/4215398058.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_37462/4215398058.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -396,10 +384,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T22:12:30.626089Z",
-     "iopub.status.busy": "2023-06-27T22:12:30.625928Z",
-     "iopub.status.idle": "2023-06-27T22:12:30.642788Z",
-     "shell.execute_reply": "2023-06-27T22:12:30.642443Z"
+     "iopub.execute_input": "2023-06-29T22:54:59.343977Z",
+     "iopub.status.busy": "2023-06-29T22:54:59.343589Z",
+     "iopub.status.idle": "2023-06-29T22:54:59.360321Z",
+     "shell.execute_reply": "2023-06-29T22:54:59.359959Z"
     },
     "jukit_cell_id": "UFK0jsur96"
    },
@@ -429,10 +417,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T22:12:30.644122Z",
-     "iopub.status.busy": "2023-06-27T22:12:30.644012Z",
-     "iopub.status.idle": "2023-06-27T22:13:36.090597Z",
-     "shell.execute_reply": "2023-06-27T22:13:36.090186Z"
+     "iopub.execute_input": "2023-06-29T22:54:59.361780Z",
+     "iopub.status.busy": "2023-06-29T22:54:59.361673Z",
+     "iopub.status.idle": "2023-06-29T22:56:00.935962Z",
+     "shell.execute_reply": "2023-06-29T22:56:00.935631Z"
     },
     "jukit_cell_id": "4WFLztISAE"
    },
@@ -478,10 +466,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T22:13:36.092427Z",
-     "iopub.status.busy": "2023-06-27T22:13:36.092223Z",
-     "iopub.status.idle": "2023-06-27T22:13:36.142904Z",
-     "shell.execute_reply": "2023-06-27T22:13:36.142430Z"
+     "iopub.execute_input": "2023-06-29T22:56:00.937538Z",
+     "iopub.status.busy": "2023-06-29T22:56:00.937410Z",
+     "iopub.status.idle": "2023-06-29T22:56:00.991301Z",
+     "shell.execute_reply": "2023-06-29T22:56:00.991015Z"
     },
     "jukit_cell_id": "IGfHc3jp2H"
    },
