Removed redundant file, cleaned, and reran code

--- a/1.train_models/log_reg_plates_cp_fs_data/plate_1/train_model.ipynb
+++ b/1.train_models/log_reg_plates_cp_fs_data/plate_1/train_model.ipynb
@@ -23,24 +23,18 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:54:50.386449Z",
-     "iopub.status.busy": "2023-06-29T21:54:50.386350Z",
-     "iopub.status.idle": "2023-06-29T21:54:50.772579Z",
-     "shell.execute_reply": "2023-06-29T21:54:50.772250Z"
+     "iopub.execute_input": "2023-06-30T23:38:59.748957Z",
+     "iopub.status.busy": "2023-06-30T23:38:59.748808Z",
+     "iopub.status.idle": "2023-06-30T23:38:59.953695Z",
+     "shell.execute_reply": "2023-06-30T23:38:59.953285Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "import sys\n",
     "from pathlib import Path\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split, KFold\n",
-    "\n",
-    "\n",
     "from joblib import dump"
    ]
   },
@@ -58,10 +52,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:54:50.774327Z",
-     "iopub.status.busy": "2023-06-29T21:54:50.773942Z",
-     "iopub.status.idle": "2023-06-29T21:54:50.776555Z",
-     "shell.execute_reply": "2023-06-29T21:54:50.776290Z"
+     "iopub.execute_input": "2023-06-30T23:38:59.955559Z",
+     "iopub.status.busy": "2023-06-30T23:38:59.955286Z",
+     "iopub.status.idle": "2023-06-30T23:38:59.957882Z",
+     "shell.execute_reply": "2023-06-30T23:38:59.957577Z"
     },
     "jukit_cell_id": "Iz4nqgONsd"
    },
@@ -88,10 +82,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jukit_cell_id": "OQe1PK1lIs"
+    "jukit_cell_id": "mG64sxNen5"
    },
    "source": [
-    "# Seed and Generator for Reproducibility"
+    "## Import Utils"
    ]
   },
   {
@@ -99,17 +93,35 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:54:50.777836Z",
-     "iopub.status.busy": "2023-06-29T21:54:50.777574Z",
-     "iopub.status.idle": "2023-06-29T21:54:50.779435Z",
-     "shell.execute_reply": "2023-06-29T21:54:50.779207Z"
+     "iopub.execute_input": "2023-06-30T23:38:59.959174Z",
+     "iopub.status.busy": "2023-06-30T23:38:59.958913Z",
+     "iopub.status.idle": "2023-06-30T23:39:00.134901Z",
+     "shell.execute_reply": "2023-06-30T23:39:00.134512Z"
     },
-    "jukit_cell_id": "EBc3nCzByb"
+    "jukit_cell_id": "wRZI5OrJHU"
    },
    "outputs": [],
    "source": [
-    "rnd_val = 0  # Random value for all seeds\n",
-    "rng = np.random.default_rng(seed=rnd_val)  # random number generator"
+    "sys.path.append(f\"{root_dir}/1.train_models/log_reg_plates_cp_fs_data/utils\")\n",
+    "import log_reg_plates_cp_fs_data_train_util as au"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-30T23:39:00.136580Z",
+     "iopub.status.busy": "2023-06-30T23:39:00.136337Z",
+     "iopub.status.idle": "2023-06-30T23:39:00.138206Z",
+     "shell.execute_reply": "2023-06-30T23:39:00.137913Z"
+    },
+    "jukit_cell_id": "W0r3iUcGVA"
+   },
+   "outputs": [],
+   "source": [
+    "# Random integer as a seed\n",
+    "rnd_val = 0"
    ]
   },
   {
@@ -123,27 +135,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:54:50.780737Z",
-     "iopub.status.busy": "2023-06-29T21:54:50.780479Z",
-     "iopub.status.idle": "2023-06-29T21:54:50.782551Z",
-     "shell.execute_reply": "2023-06-29T21:54:50.782303Z"
+     "iopub.execute_input": "2023-06-30T23:39:00.139383Z",
+     "iopub.status.busy": "2023-06-30T23:39:00.139183Z",
+     "iopub.status.idle": "2023-06-30T23:39:00.141400Z",
+     "shell.execute_reply": "2023-06-30T23:39:00.141108Z"
     },
     "jukit_cell_id": "EYGHUOxuTt"
    },
    "outputs": [],
    "source": [
-    "filename1 = \"Plate_1_sc_norm_fs.parquet\"\n",
+    "filename = \"Plate_1_sc_norm_fs.parquet\"\n",
     "plate_path = Path(\n",
     "    f\"{root_dir}/nf1_painting_repo/3.processing_features/data/feature_selected_data\"\n",
     ")\n",
     "\n",
-    "path1 = plate_path / filename1\n",
+    "path = plate_path / filename\n",
+    "\n",
     "\n",
     "data_path = Path(\"data\")\n",
-    "\n",
+    "output_prefix = \"plate_1_cp_fs_data\"\n",
     "# Create the parent directories if they don't exist\n",
     "data_path.mkdir(parents=True, exist_ok=True)"
    ]
@@ -159,68 +172,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:54:50.783839Z",
-     "iopub.status.busy": "2023-06-29T21:54:50.783740Z",
-     "iopub.status.idle": "2023-06-29T21:54:50.810127Z",
-     "shell.execute_reply": "2023-06-29T21:54:50.809863Z"
+     "iopub.execute_input": "2023-06-30T23:39:00.142561Z",
+     "iopub.status.busy": "2023-06-30T23:39:00.142356Z",
+     "iopub.status.idle": "2023-06-30T23:39:00.167908Z",
+     "shell.execute_reply": "2023-06-30T23:39:00.167566Z"
     },
     "jukit_cell_id": "A8cPG2OifP"
    },
    "outputs": [],
    "source": [
-    "# Returns the dataframe generated by the csv\n",
-    "platedf = pd.read_parquet(path1)"
+    "platedf = pd.read_parquet(path)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "jukit_cell_id": "6lb4kpNpXs"
+    "jukit_cell_id": "iUa93hXkFi"
    },
    "source": [
-    "# Preprocess Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "jukit_cell_id": "0iWlDGQ4Qh"
-   },
-   "source": [
-    "## Create Classes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-29T21:54:50.811611Z",
-     "iopub.status.busy": "2023-06-29T21:54:50.811316Z",
-     "iopub.status.idle": "2023-06-29T21:54:50.813177Z",
-     "shell.execute_reply": "2023-06-29T21:54:50.812939Z"
-    },
-    "jukit_cell_id": "jH432rS91v"
-   },
-   "outputs": [],
-   "source": [
-    "target_column = \"Metadata_genotype\"\n",
-    "stratify_column = \"Metadata_Well\"\n",
-    "\n",
-    "# These represent the fractions of the entire dataset\n",
-    "train_val_frac = 0.85"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "jukit_cell_id": "wo4oj6xAxg"
-   },
-   "source": [
-    "## Down-sample and stratify by well"
+    "## Get the best model, the test set, and the label encode"
    ]
   },
   {
@@ -228,92 +201,25 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:54:50.814266Z",
-     "iopub.status.busy": "2023-06-29T21:54:50.814165Z",
-     "iopub.status.idle": "2023-06-29T21:54:50.822913Z",
-     "shell.execute_reply": "2023-06-29T21:54:50.822672Z"
+     "iopub.execute_input": "2023-06-30T23:39:00.169410Z",
+     "iopub.status.busy": "2023-06-30T23:39:00.169171Z",
+     "iopub.status.idle": "2023-06-30T23:39:01.105911Z",
+     "shell.execute_reply": "2023-06-30T23:39:01.105481Z"
     },
-    "jukit_cell_id": "6wLIrXfTzh"
-   },
-   "outputs": [],
-   "source": [
-    "smallest_gene = platedf[target_column].value_counts().min()\n",
-    "platedata = pd.DataFrame()\n",
-    "\n",
-    "for gene in platedf[target_column].unique():\n",
-    "    df = platedf.loc[platedf[\"Metadata_genotype\"] == gene]\n",
-    "    df_frac = smallest_gene / len(df)\n",
-    "    stratwell = df.groupby(stratify_column, group_keys=False).apply(\n",
-    "        lambda x: x.sample(frac=df_frac, random_state=rnd_val)\n",
-    "    )\n",
-    "    platedata = pd.concat([platedata, stratwell], axis=\"rows\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "jukit_cell_id": "DlNzPGZ5H0"
-   },
-   "source": [
-    "## Stratified Train-test split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-29T21:54:50.824357Z",
-     "iopub.status.busy": "2023-06-29T21:54:50.824125Z",
-     "iopub.status.idle": "2023-06-29T21:54:50.828013Z",
-     "shell.execute_reply": "2023-06-29T21:54:50.827777Z"
-    },
-    "jukit_cell_id": "VNkswJFWjR"
-   },
-   "outputs": [],
-   "source": [
-    "traindf, testdf = train_test_split(\n",
-    "    platedata,\n",
-    "    train_size=train_val_frac,\n",
-    "    stratify=platedata[[target_column, stratify_column]],\n",
-    "    shuffle=True,\n",
-    "    random_state=rnd_val,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "jukit_cell_id": "J3dEPROtx7"
-   },
-   "source": [
-    "## Encode Labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-29T21:54:50.829429Z",
-     "iopub.status.busy": "2023-06-29T21:54:50.829205Z",
-     "iopub.status.idle": "2023-06-29T21:54:50.831927Z",
-     "shell.execute_reply": "2023-06-29T21:54:50.831667Z"
-    },
-    "jukit_cell_id": "wqT9BUqx7w"
+    "jukit_cell_id": "L4K1PaebDE"
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_34300/4215398058.py:2: SettingWithCopyWarning: \n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:128: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  testdf[\"label\"] = le.fit_transform(testdf[target_column].values)\n",
-      "/tmp/ipykernel_34300/4215398058.py:3: SettingWithCopyWarning: \n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/1.train_models/log_reg_plates_cp_fs_data/utils/log_reg_plates_cp_fs_data_train_util.py:129: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -323,156 +229,7 @@
     }
    ],
    "source": [
-    "le = LabelEncoder()\n",
-    "testdf[\"label\"] = le.fit_transform(testdf[target_column].values)\n",
-    "traindf[\"label\"] = le.transform(traindf[target_column].values)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "jukit_cell_id": "sRlEwWwsSj"
-   },
-   "source": [
-    "## Remove unecessary columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-29T21:54:50.851343Z",
-     "iopub.status.busy": "2023-06-29T21:54:50.851053Z",
-     "iopub.status.idle": "2023-06-29T21:54:50.854080Z",
-     "shell.execute_reply": "2023-06-29T21:54:50.853840Z"
-    },
-    "jukit_cell_id": "UFK0jsur96"
-   },
-   "outputs": [],
-   "source": [
-    "# Remove Metadata\n",
-    "feat_col = [col for col in platedata.columns if \"Metadata\" not in col]\n",
-    "\n",
-    "# Keep the label column\n",
-    "feat_col.append(\"label\")\n",
-    "\n",
-    "traindf = traindf[feat_col]\n",
-    "testdf = testdf[feat_col]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "jukit_cell_id": "BKgaV6JeDZ"
-   },
-   "source": [
-    "# Model Training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-29T21:54:50.855297Z",
-     "iopub.status.busy": "2023-06-29T21:54:50.855050Z",
-     "iopub.status.idle": "2023-06-29T21:54:50.858220Z",
-     "shell.execute_reply": "2023-06-29T21:54:50.857981Z"
-    },
-    "jukit_cell_id": "SnNRV5kCfc"
-   },
-   "outputs": [],
-   "source": [
-    "# Default number of splits\n",
-    "num_splits = 5\n",
-    "\n",
-    "\n",
-    "def kcross_val(model, X_data, y_data, splits=num_splits):\n",
-    "    \"\"\"\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    model: sklearn model\n",
-    "        The model to be trained and evaluated.\n",
-    "    X_data : Pandas Dataframe\n",
-    "        The preprocessed dataframe with features.\n",
-    "    y_data : Pandas Dataframe\n",
-    "        The preprocessed dataframe with labels.\n",
-    "    splits: int\n",
-    "        The number of splits for k cross validation\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    best_model: Sklearn Model\n",
-    "        The best model based on the validation accuracy\n",
-    "    \"\"\"\n",
-    "\n",
-    "    cv = KFold(n_splits=splits, random_state=rnd_val, shuffle=True)\n",
-    "    max_acc = 0  # Keep track of the maximum accuracy\n",
-    "\n",
-    "    # iterates through index splits\n",
-    "    for train_idx, val_idx in cv.split(X=X_data, y=y_data):\n",
-    "        # Validation labels converted to ints\n",
-    "        yval = y_data.iloc[val_idx].astype(np.int64)\n",
-    "\n",
-    "        # Training labels converted to ints\n",
-    "        ytrain = y_data.iloc[train_idx].astype(np.int64)\n",
-    "\n",
-    "        # Validation features\n",
-    "        Xval = X_data.iloc[val_idx]\n",
-    "\n",
-    "        # Training features\n",
-    "        Xtrain = X_data.iloc[train_idx]\n",
-    "\n",
-    "        # Fitting the model\n",
-    "        model.fit(Xtrain, ytrain)\n",
-    "\n",
-    "        # Scoring the model on the validation set\n",
-    "        acc = model.score(Xval, yval)\n",
-    "\n",
-    "        # Find the model with the best validation accuracy\n",
-    "        if max_acc < acc:\n",
-    "            best_model = model\n",
-    "\n",
-    "    return best_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-29T21:54:50.859406Z",
-     "iopub.status.busy": "2023-06-29T21:54:50.859166Z",
-     "iopub.status.idle": "2023-06-29T21:54:51.931033Z",
-     "shell.execute_reply": "2023-06-29T21:54:51.930650Z"
-    },
-    "jukit_cell_id": "4WFLztISAE"
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/camo/anaconda3/envs/nf1_analysis/lib/python3.9/site-packages/sklearn/linear_model/_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\"The max_iter was reached which means \"\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(max_iter=1000, n_jobs=-1, random_state=0, solver='sag')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lr = LogisticRegression(max_iter=1000, solver=\"sag\", random_state=rnd_val, n_jobs=-1)\n",
-    "\n",
-    "kcross_val(lr, X_data=traindf.drop(\"label\", axis=\"columns\"), y_data=traindf[\"label\"])"
+    "lr, testdf, le = au.get_model_data(platedf)"
    ]
   },
   {
@@ -486,32 +243,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-29T21:54:51.932729Z",
-     "iopub.status.busy": "2023-06-29T21:54:51.932588Z",
-     "iopub.status.idle": "2023-06-29T21:54:51.938447Z",
-     "shell.execute_reply": "2023-06-29T21:54:51.938109Z"
+     "iopub.execute_input": "2023-06-30T23:39:01.107727Z",
+     "iopub.status.busy": "2023-06-30T23:39:01.107610Z",
+     "iopub.status.idle": "2023-06-30T23:39:01.121145Z",
+     "shell.execute_reply": "2023-06-30T23:39:01.120873Z"
     },
-    "jukit_cell_id": "Qj7E7OvtI9"
+    "jukit_cell_id": "inswCM144a"
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['data/label_encoder.joblib']"
+       "['data/plate_1_cp_fs_data_label_encoder.joblib']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dump(lr, data_path / \"lr_model.joblib\")\n",
-    "dump(testdf, data_path / \"testdf.joblib\")\n",
-    "dump(le, data_path / \"label_encoder.joblib\")"
+    "dump(lr, data_path / f\"{output_prefix}_lr_model.joblib\")\n",
+    "testdf.to_csv(f\"{data_path}/{output_prefix}_testdf.tsv\", sep=\"\\t\", index=False)\n",
+    "dump(le, data_path / f\"{output_prefix}_label_encoder.joblib\")"
    ]
   }
  ],
